--- a/public/app.css
+++ b/public/app.css
@@ -18,6 +18,10 @@ body {
   background-position: 50% 20%;
 }
 
+.margin-left-1 {
+  margin-left: 1em;
+}
+
 .header {
   background-color: rgba(0,0,0,.7);
   padding: 120px 0px;
