Fixed Military heading appearing when no valid military careers existed.

--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -201,7 +201,7 @@
                         span(ng-show="e.to") -{{e.to}}
                         span(ng-show="e.from || e.to") )
 
-          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.military.length") 
+          .col-lg-12.col-md-4.col-sm-6(ng-show="entry.filtered_military.length") 
             .panel.panel-default
               .panel-heading Military careers
               ul.list-group
