--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -253,15 +253,8 @@
               .panel-heading Mentioned Names
               ul.list-group
                 li.list-group-item(ng-repeat="e in entry.mentionedNames") 
-                    div(style="font-style: italic;", ng-show="!e.entry") {{ e.name }}
-                    div(style="cursor: pointer;", ng-show="e.entry") {{ e.name }}
-                    a.mentioned-names-popup(
-                      ng-show="e.entry",
-                      ng-href="{{ getEntryLink(e.entry.index) }}",
-                      ng-click="handleEntryClick()",
-                    )
-                      h4 {{ e.entry.fullName }}
-                      p {{ e.entry.biography.slice(0, 100) }}...
+                  div {{ e.name }}
+                    entry-link(index="{{ e.entryIndex }}")
           
           .col-lg-12.col-md-4.col-sm-6
             div.btn-group.add-to-list-btn.pull-left
