--- a/public/app.css
+++ b/public/app.css
@@ -780,28 +780,6 @@ table.table {
   width: 7.5em;
 }
 
-.mentioned-names-popup {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 100%;
-  background-color: white;
-  z-index: 1;
-  box-shadow: 0 2px 10px #ccc;
-  border-radius: 2px;
-  padding: .5em 1em;
-  width: 100%;
-}
-
-li.list-group-item:active {
-  z-index: 1;
-}
-
-li.list-group-item:hover .mentioned-names-popup {
-  display: block;
-  background-color: white;
-}
-
 ul.list-group.entry-facet > li {
   display: flex;
   align-items: center;
@@ -964,4 +942,51 @@ ul.list-group.entry-facet > li .controls {
 .sorted-dimension-empty .entry-list-item a {
   font-style: italic;
   color: #888;
+}
+
+a.entry-link {
+  display: inline-block;
+  width: .75em;
+  height: .75em;
+  border-radius: .75em;
+  background-color: rgba(188, 188, 188, 1);
+  vertical-align: baseline;
+  margin-left: .35em;
+  transition: background-color .25s;
+}
+
+a.entry-link:hover {
+  border-radius: .75em;
+  background-color: rgba(188, 188, 188, 1);
+}
+
+a.entry-link.loaded {
+  background-color: rgba(119, 187, 255, 1);
+  cursor: pointer;
+}
+
+a.entry-link.loaded:hover {
+  background-color: rgba(119, 187, 255, .75);
+}
+
+.entry-link.loaded .entry-link-popup {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  background-color: white;
+  z-index: 1;
+  box-shadow: 0 2px 10px #ccc;
+  border-radius: 2px;
+  padding: .5em 1em;
+  width: 100%;
+}
+
+.entry-link.loaded:hover .entry-link-popup {
+  display: block;
+  background-color: white;
+}
+
+li.list-group-item:hover {
+  z-index: 1;
 }
