Updated entry origin schema and added front-end and better editing support.

--- a/public/app.css
+++ b/public/app.css
@@ -965,3 +965,18 @@ ul.list-group.entry-facet > li .controls {
   font-style: italic;
   color: #888;
 }
+
+.entry-origin {
+  margin-top: -1em;
+  margin-bottom: 1.75em;
+  font-family: 'Poly', serif;
+  font-size: 1.375em;
+  font-weight: bold;
+  color: #888;
+  letter-spacing: .5px;
+}
+
+.entry-origin a {
+  text-decoration: underline;
+  color: #666;
+}
