Add date search component

--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -43,6 +43,8 @@
                   div(ng-switch-when="freesearch")
                     free-search
                   
+                  div(ng-switch-when="date")
+                    date-search
                   div(ng-switch-when="travel")
                     travel-search
         
