--- a/public/error.pug
+++ b/public/error.pug
@@ -6,7 +6,7 @@ html(lang="en", ng-app="app")
     base(href="/")
     title Grand Tour Explorer
       
-    link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
+    link(rel="stylesheet", href="node_modules/bootstrap/dist/css/bootstrap.min.css")
     link(rel='stylesheet', href='/app.css')
 
   body
@@ -44,18 +44,18 @@ html(lang="en", ng-app="app")
     
     script(src="https://cdn.socket.io/socket.io-1.3.5.js")
       
-    script(src="bower_components/jquery/dist/jquery.min.js")
-    script(src="bower_components/bootstrap/dist/js/bootstrap.min.js")
-    script(src="bower_components/d3/d3.min.js")
-    script(src="bower_components/smartquotesjs/src/smartquotes.min.js")
+    script(src="node_modules/jquery/dist/jquery.min.js")
+    script(src="node_modules/bootstrap/dist/js/bootstrap.min.js")
+    script(src="node_modules/d3/d3.min.js")
+    script(src="node_modules/smartquotesjs/src/smartquotes.min.js")
 
-    script(src="bower_components/angular/angular.min.js")
-    script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
-    script(src="bower_components/angular-animate/angular-animate.min.js")
-    script(src="bower_components/angular-ui-router/release/angular-ui-router.min.js")
+    script(src="node_modules/angular/angular.min.js")
+    script(src="node_modules/angular-sanitize/angular-sanitize.min.js")
+    script(src="node_modules/angular-animate/angular-animate.min.js")
+    script(src="node_modules/angular-ui-router/release/angular-ui-router.min.js")
 
-    script(src="bower_components/angular-bootstrap/ui-bootstrap.min.js")
-    script(src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")
+    script(src="node_modules/angular-bootstrap/ui-bootstrap.min.js")
+    script(src="node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js")
 
     script(type='text/javascript', src='/app.js')
     script(type='text/javascript', src='/main/main.js')
