--- a/public/index.pug
+++ b/public/index.pug
@@ -49,25 +49,25 @@ html(lang="en", ng-app="app")
             
     script(src="https://cdn.socket.io/socket.io-1.3.5.js")
       
-    script(src="bower_components/jquery/dist/jquery.min.js")
-    script(src="bower_components/bootstrap/dist/js/bootstrap.min.js")
-    script(src="bower_components/d3/d3.min.js")
-    script(src="bower_components/crossfilter/crossfilter.min.js")
-    script(src="bower_components/FileSaver/FileSaver.min.js")
-    script(src="bower_components/jszip/dist/jszip.min.js")
-    script(src="bower_components/ckeditor/ckeditor.js")
+    script(src="node_modules/jquery/dist/jquery.min.js")
+    script(src="node_modules/bootstrap/dist/js/bootstrap.min.js")
+    script(src="node_modules/d3/d3.min.js")
+    script(src="node_modules/crossfilter/crossfilter.min.js")
+    script(src="node_modules/file-saver/dist/FileSaver.min.js")
+    script(src="node_modules/jszip/dist/jszip.min.js")
+    script(src="node_modules/ckeditor/ckeditor.js")
     script.
       CKEDITOR.disableAutoInline = true
 
-    script(src="bower_components/angular/angular.min.js")
-    script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
-    script(src="bower_components/angular-animate/angular-animate.min.js")
-    script(src="bower_components/angular-ui-router/release/angular-ui-router.min.js")
-    script(src="bower_components/Sortable/Sortable.js")
-    script(src="bower_components/angular-legacy-sortablejs/angular-legacy-sortable.js")
+    script(src="node_modules/angular/angular.min.js")
+    script(src="node_modules/angular-sanitize/angular-sanitize.min.js")
+    script(src="node_modules/angular-animate/angular-animate.min.js")
+    script(src="node_modules/angular-ui-router/release/angular-ui-router.min.js")
+    script(src="node_modules/sortablejs/Sortable.js")
+    script(src="node_modules/angular-legacy-sortablejs-maintained/angular-legacy-sortable.js")
 
-    script(src="bower_components/angular-bootstrap/ui-bootstrap.min.js")
-    script(src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")
+    script(src="node_modules/angular-bootstrap/ui-bootstrap.min.js")
+    script(src="node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js")
 
     script(type='text/javascript', src='/app.js')
     script(type='text/javascript', src='/main/main.js')
