--- a/public/error.pug
+++ b/public/error.pug
@@ -6,8 +6,8 @@ html(lang="en", ng-app="app")
     base(href="/")
     title Grand Tour Explorer
       
-    link(rel="stylesheet", href="node_modules/bootstrap/dist/css/bootstrap.min.css")
-    link(rel='stylesheet', href='/app.css')
+    //- link(rel="stylesheet", href="node_modules/bootstrap/dist/css/bootstrap.min.css")
+    //- link(rel='stylesheet', href='/app.css')
 
   body
         
@@ -42,26 +42,26 @@ html(lang="en", ng-app="app")
     script.
       try{Typekit.load();}catch(e){}
     
-    script(src="https://cdn.socket.io/socket.io-1.3.5.js")
+    //- script(src="https://cdn.socket.io/socket.io-1.3.5.js")
       
-    script(src="node_modules/jquery/dist/jquery.min.js")
-    script(src="node_modules/bootstrap/dist/js/bootstrap.min.js")
-    script(src="node_modules/d3/d3.min.js")
-    script(src="node_modules/smartquotesjs/src/smartquotes.min.js")
+    //- script(src="node_modules/jquery/dist/jquery.min.js")
+    //- script(src="node_modules/bootstrap/dist/js/bootstrap.min.js")
+    //- script(src="node_modules/d3/d3.min.js")
+    //- script(src="node_modules/smartquotesjs/src/smartquotes.min.js")
 
-    script(src="node_modules/angular/angular.min.js")
-    script(src="node_modules/angular-sanitize/angular-sanitize.min.js")
-    script(src="node_modules/angular-animate/angular-animate.min.js")
-    script(src="node_modules/angular-ui-router/release/angular-ui-router.min.js")
+    //- script(src="node_modules/angular/angular.min.js")
+    //- script(src="node_modules/angular-sanitize/angular-sanitize.min.js")
+    //- script(src="node_modules/angular-animate/angular-animate.min.js")
+    //- script(src="node_modules/angular-ui-router/release/angular-ui-router.min.js")
 
-    script(src="node_modules/angular-bootstrap/ui-bootstrap.min.js")
-    script(src="node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js")
+    //- script(src="node_modules/angular-bootstrap/ui-bootstrap.min.js")
+    //- script(src="node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js")
 
-    script(type='text/javascript', src='/app.js')
-    script(type='text/javascript', src='/main/main.js')
-    script(type='text/javascript', src='/admin/admin.js')
-    script(type='text/javascript', src='/login/login.js')
-    script(type='text/javascript', src='/register/register.js')
-    script(type='text/javascript', src='/search/search.js')
-    script(type='text/javascript', src='/explore/explore.js')
-    script(type='text/javascript', src='/entry/entry.js')
+    //- script(type='text/javascript', src='/app.js')
+    //- script(type='text/javascript', src='/main/main.js')
+    //- script(type='text/javascript', src='/admin/admin.js')
+    //- script(type='text/javascript', src='/login/login.js')
+    //- script(type='text/javascript', src='/register/register.js')
+    //- script(type='text/javascript', src='/search/search.js')
+    //- script(type='text/javascript', src='/explore/explore.js')
+    //- script(type='text/javascript', src='/entry/entry.js')
