--- a/public/app.css
+++ b/public/app.css
@@ -556,6 +556,10 @@ hr {
     padding: 6px 10px;
 }
 
+.pill-negative {
+  text-decoration: line-through;
+}
+
 .dropdown-menu {
   font-size: 13px;
   border-radius: 2px;
