feat: add duplicate button, fixes #16

--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -24,6 +24,7 @@
         .col-lg-10
           .clearfix.margin-bottom
             a.btn-xs.btn.btn-danger.pull-right(ng-click="clear()") Clear all
+            a.btn-xs.btn.btn-success.pull-right(ng-click="duplicate()", style="margin-right: 10px") Duplicate
       
           form
             .row
