--- a/public/components/pills/pills.pug
+++ b/public/components/pills/pills.pug
@@ -5,11 +5,13 @@ p
           strong {{ pill.value.startYear }}
         .pill-value(ng-if="pill.value && pill.value.startYear && pill.value.startYear != pill.value.endYear")
           strong {{ pill.value.startYear }} - {{ pill.value.endYear }}
-        .pill-value(ng-if="pill.value && !pill.value.startYear")
-          span(ng-show="pill.value | isArray" ng-repeat="value in pill.value track by $index")
-            span(ng-show="$index > 0") or 
-            strong(ng-class="{'pill-negative': value.negative === true}") {{ value._id || value }} 
-          strong(ng-hide="pill.value | isArray") {{ pill.value }}
+        .pill-value(ng-if="pill.value.uniques")
+          span(ng-show="pill.value.uniques | isArray" ng-repeat="value in pill.value.uniques track by $index")
+            span(ng-show="$index > 0 && pill.value.operator === 'or' ")  or 
+            span(ng-show="$index > 0 && pill.value.operator === 'and' ")  and 
+            strong(ng-class="{'pill-negative': value.negative === true}") {{ value._id || value }}
+        .pill-value(ng-if="!pill.value.uniques && !pill.value.startYear")
+          strong {{ pill.value }}
         .pill-value.border-left(ng-if="allowRemove")
           a.text-danger(ng-click="removeFromQuery(pill.key)", data-toggle="tooltip", title="Remove")
             i.fa.fa-trash-o
