--- a/public/app.css
+++ b/public/app.css
@@ -608,6 +608,10 @@ hr {
   margin-right: 10px;
 }
 
+.add-to-list-btn {
+  margin-right: 10px;
+}
+
 .add-to-list-btn .input-group {
   width: 225px;
   margin: 10px;
