--- a/public/app.css
+++ b/public/app.css
@@ -993,3 +993,21 @@ ul.list-group.entry-facet > li .controls {
   text-decoration: underline;
   color: #666;
 }
+
+/* Viz */
+
+div.tool_tip {	
+  position: absolute;			
+  text-align: center;			
+  width: 100px;					
+  height: 38px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  /* border: 1px solid black;					 */
+  padding: 2px;				
+  font: 12px sans-serif;		
+  background: lightsteelblue;	
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;			
+}
