feat: implement some level of month search

--- a/public/explore/explore.pug
+++ b/public/explore/explore.pug
@@ -47,7 +47,7 @@
                   div(ng-switch-when="date")
                     date-search(data-title="{{dimension.label}}", data-field="{{dimension.field}}")
                   div(ng-switch-when="travel")
-                    travel-search
+                    date-search
         
     .col-lg-12 
     
